// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FrontPageByline renders with container style 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 10,
      },
      Object {
        "marginBottom": 100,
      },
      false,
    ]
  }
>
  <Text
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
  >
    <ArticleByline
      ast={
        Array [
          Object {
            "byline": Array [
              Object {
                "foo": "bar",
              },
            ],
          },
        ]
      }
      bylineStyle={
        Object {
          "color": "#1D1D1B",
          "fontFamily": "GillSansMTStd-Bold",
          "fontSize": 13,
          "lineHeight": 14,
        }
      }
    />
  </Text>
</View>
`;

exports[`FrontPageByline renders with keyline 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 10,
      },
      undefined,
      Object {
        "borderColor": "#999999",
        "borderTopWidth": 1,
        "marginTop": 5,
        "paddingTop": 6,
      },
    ]
  }
>
  <Text
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
  >
    <ArticleByline
      ast={
        Array [
          Object {
            "byline": Array [
              Object {
                "foo": "bar",
              },
            ],
          },
        ]
      }
      bylineStyle={
        Object {
          "color": "#1D1D1B",
          "fontFamily": "GillSansMTStd-Bold",
          "fontSize": 13,
          "lineHeight": 14,
        }
      }
    />
  </Text>
</View>
`;

exports[`FrontPageByline renders without keyline 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 10,
      },
      undefined,
      false,
    ]
  }
>
  <Text
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
  >
    <ArticleByline
      ast={
        Array [
          Object {
            "byline": Array [
              Object {
                "foo": "bar",
              },
            ],
          },
        ]
      }
      bylineStyle={
        Object {
          "color": "#1D1D1B",
          "fontFamily": "GillSansMTStd-Bold",
          "fontSize": 13,
          "lineHeight": 14,
        }
      }
    />
  </Text>
</View>
`;
